# DSL_Jupyter_Package

./: .gitignore  HyplTest.ipynb  Makefile  README.md  SQLiteMagic.db  Test.ipynb  Untitled.ipynb  Untitled1.ipynb  graph  graph_20241001_134938  graph_diagram.tex  pyproject.toml
.ipynb_checkpoints/: HyplTest-checkpoint.ipynb
cell_magic/: __init__.py  cell_magic.py
echo_append/: __init__.py  echo_append.py
highlight/: .copier-answers.yml  .gitignore  .prettierignore  LICENSE  README.md  RELEASE.md  Untitled.ipynb  install.json  package.json  pyproject.toml
highlight/.github/workflows/: build.yml  check-release.yml
highlight/binder/: environment.yml  postBuild
highlight/highlight/: __init__.py
highlight/src/: index.ts
highlight/src/__tests__/: highlight.spec.ts
highlight/ui-tests/: package.json
highlight/ui-tests/tests/: highlight.spec.ts
syntax_highlighting/: .copier-answers.yml  .gitignore  README.md  Untitled.ipynb  package-lock.json  package.json  tsconfig.json
syntax_highlighting/src/: index.ts  main.ts  parser.js
syntax_highlighting_new/: .copier-answers.yml  package.json  tsconfig.tsbuildinfo
syntax_highlighting_new/lib/: index.d.ts  index.js  index.js.map
syntax_highlighting_new/myextension/labextension/: build_log.json  package.json
syntax_highlighting_new/myextension/labextension/static/: lib_index_js.68a3f59ff0b281806293.js  lib_index_js.68a3f59ff0b281806293.js.map  remoteEntry.054c988ddb2b995ee508.js  remoteEntry.054c988ddb2b995ee508.js.map  style_index_js.7767634a848ea18db863.js  (+3 more)
syntax_highlighting_new/src/: index.ts
