[tool.poetry]
name = "syntax_highlighting"
version = "0.1.0"
description = ""
authors = ["Kevin Yang <your.email@example.com>"]
packages = [
    { include = "echo_append"}
]


[tool.poetry.dependencies]
python = "3.11.x"
ipython = "^7.0"
graphviz = "^0.20"
pillow = "^10.4.0" 
notebook = "^7.0"
jupyter = "^1.0"
jinja2-time = "*"
parsimonious = "^0.10.0"
helical = {git = "git@github.com:etosch/emergency.git"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"