[tool.poetry]
name = "syntax_highlighting"
version = "0.1.0"
description = ""
authors = ["Kevin Yang <your.email@example.com>"]
packages = [
    { include = "echo_append"}
]

[tool.poetry.dependencies]
python = "3.11.x"
ipython = "^7.0"
graphviz = "*"
notebook = "^7.0"
jupyter = "*"
jinja2-time = "*"
jupyter-tikz = "*"
helical = {git = "ssh://git@github.com/etosch/emergency.git"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"