[tool.poetry]
name = "syntax_highlighting"
version = "0.1.0"
description = ""
authors = ["Example <your.email@example.com>"]
packages = [
    { include = "cell_magic"}
]

[tool.poetry.dependencies]
python = "3.12.x"
ipython = "^7.0"
notebook = "^7.0"
jupyter = "*"
jinja2-time = "*"
jupyter-tikz = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"